--- a/asus.html
+++ b/asus.html
@@ -62,8 +62,9 @@
 			</div>
 		</div>
 	</div>
-		<div class="submain">
-		<div class="main__distance1"></div>
+
+	<div class="main">
+		<div class="main__distance"></div>
 		<div class="component__main">
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
@@ -89,31 +90,34 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="main__distance"></div>
+
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image asus1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus VivoBook X409JA i3 1005G1/4GB/512GB/Win10 (EK015T)
+<a></div>
+				<div class="product-price">12.390.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 14 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i3 Ice Lake, 1005G1, 1.20 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 22.9 mm, 1.5 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -123,28 +127,63 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image asus2"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus VivoBook A412FA i5 10210U/8GB/512GB/Win10 (EK738T) <a></div>
+				<div class="product-price">12.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="main__star">
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image asus3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus VivoBook A412FA i5 8145U/4GB/32GB+512GB/Win10 (EK661T)
+<a></div>
+				<div class="product-price">13.690.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, WXGA+(1440 x 900)</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB, DDR3L(On board), 1600 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home XL</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 22 mm, 1.89 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -154,59 +193,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image asus4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">VivoBook A512FA i5 10210U/8GB/512GB/Chuột/Win10 (EJ1734T) <a></div>
+				<div class="product-price">14.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Window 10 Home XL </p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 16.9 mm, 1.87 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -216,134 +224,8 @@
 				</div>
 			</div>
 		</div>
-			<div class="main__distance"></div>
-			<div class="main__star">
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
+
+		
 	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
