--- a/dell.html
+++ b/dell.html
@@ -23,7 +23,7 @@
 						<button type="submit" class="button button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
-				<div ><button class="shopping-cart button"><i class="fa fa-shopping-cart fa-2x"></i></button></div>
+				<div><a href="./shopping.html"><button class="button" id="shopping-cart"><i class="fa fa-shopping-cart fa-2x"></i></button></a></div>
 			</div>
 		</div>
 		<div class="header__menu">
@@ -62,8 +62,10 @@
 			</div>
 		</div>
 	</div>
-		<div class="submain">
-		<div class="main__distance1"></div>
+	
+	<div class="main">
+		<div class="main__distance"></div>
+
 		<div class="component__main">
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
@@ -89,31 +91,33 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="main__distance"></div>
+
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Inspiron 3581 i3 7020U/4GB/1TB/Win10 (P75F005N81A)<a></div>
+				<div class="product-price">12.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i3 Kabylake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.66 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -123,28 +127,64 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell2"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Inspiron N3580 i5 8265U/4GB/1TB/Win10 (P75F106N80I)
+
+<a></div>
+				<div class="product-price">15.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee lake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 20.66 mm, 2.28 kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="main__star">
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Vostro 3580 i5 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
+				<div class="product-price">16.020.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee Lake, 7020U, 2.30 GHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 520, 2GB</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -154,28 +194,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Vostro 5580 i7 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
+				<div class="product-price">27.020.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i7 Coffee Lake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 630, 4GB</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 1.98 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -184,166 +224,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
 			</div>
 		</div>
-			<div class="main__distance"></div>
-			<div class="main__star">
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
+
+
 	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
