--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -116,28 +116,28 @@
 		<div class="main__distance"></div>
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image asus1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Asus VivoBook X409JA i3 1005G1/4GB/512GB/Win10 (EK015T)<a></div>
+				<div class="product-price">12.390.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 14 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i3 Ice Lake, 1005G1, 1.20 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home </p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 22.9 mm, 1.5 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -147,28 +147,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -178,28 +178,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Inspiron 3581 i3 7020U/4GB/1TB/Win10 (P75F005N81A)<a></div>
+				<div class="product-price">12.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i3 Kabylake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL </p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 20.66 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -209,8 +209,8 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image hp1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">HP Abvilon X507MA-BR317T/Celeron N400<a></div>
 				<div class="product-price">6.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
