--- a/hp.html
+++ b/hp.html
@@ -23,7 +23,7 @@
 						<button type="submit" class="button button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
-				<div ><button class="shopping-cart button"><i class="fa fa-shopping-cart fa-2x"></i></button></div>
+				<div><a href="./shopping.html"><button class="button" id="shopping-cart"><i class="fa fa-shopping-cart fa-2x"></i></button></a></div>
 			</div>
 		</div>
 		<div class="header__menu">
@@ -62,8 +62,10 @@
 			</div>
 		</div>
 	</div>
-		<div class="submain">
-		<div class="main__distance1"></div>
+		
+	<div class="main">
+		<div class="main__distance"></div>
+
 		<div class="component__main">
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
@@ -89,31 +91,33 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="main__distance"></div>
+
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image hp1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -123,28 +127,62 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image hp2"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
+				<div class="product-price">32.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="main__star">
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image hp3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -154,59 +192,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image hp4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
+				<div class="product-price">32.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -216,134 +223,7 @@
 				</div>
 			</div>
 		</div>
-			<div class="main__distance"></div>
-			<div class="main__star">
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Asus Vivobook X507MA-BR317T/Celeron N400<a></div>
-				<div class="product-price">6.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inchs LED Backlit</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Celeron N400</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">4 GB DDR4 2400 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Intel UHD Graphics Shared</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Windows 10 Home SL 64</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">1.73kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
+
 	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
